# cargo-fixeq

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: fix.rs  main.rs  parse_code.rs  parse_out.rs  tests.rs
