[package]
name = "cargo-fixeq"
version = "0.4.0"
edition = "2018"
authors = ["Jun Wu <quark@lihdd.net>"]
license = "MIT"
description = "Fix `assert_eq!` test errors automatically."
categories = ["development-tools::cargo-plugins", "development-tools::testing"]
keywords = ["cargo", "subcommand", "tests"]
readme = "README.md"
repository = "https://github.com/quark-zju/cargo-fixeq"

[dependencies]
anyhow = "1.0.26"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
regex = "1.0"
syn = { version = "1.0", features = ["parsing", "printing", "full", "visit"], default-features = false }

[dev-dependencies]
tempfile = "3"
