[package]
name = "cargo-fixeq"
version = "0.5.0"
edition = "2021"
authors = ["Jun Wu <quark@lihdd.net>"]
license = "MIT"
description = "Fix `assert_eq!` test errors automatically."
categories = ["development-tools::cargo-plugins", "development-tools::testing"]
keywords = ["cargo", "subcommand", "tests"]
readme = "README.md"
repository = "https://github.com/quark-zju/cargo-fixeq"
rust-version = "1.73"

[dependencies]
anyhow = "1"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn = { version = "1", features = ["parsing", "printing", "full", "visit"], default-features = false }

[dev-dependencies]
tempfile = "3"
